# rss-inbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
scripts/: install.sh  rss-inbox-run-once
scripts/macos/launchd/: rss-inbox.plist.template
src/rss_inbox/: __init__.py  cli.py  config.py  main.py
src/rss_inbox/core/: __init__.py  classify.py  feed_manager.py  feeds.py  processor.py
src/rss_inbox/plugins/: __init__.py  actions.py
src/rss_inbox/services/: __init__.py  cookies.py  state.py  writer.py
src/rss_inbox/utils/: __init__.py  paths.py
